@@ -4,8 +4,6 @@ import com.sluv.server.domain.brand.dto.BrandSearchResDto;
 import com.sluv.server.domain.brand.dto.RecentSelectBrandResDto;
 import com.sluv.server.domain.brand.entity.Brand;
 import com.sluv.server.domain.brand.entity.RecentSelectBrand;
-import com.sluv.server.domain.brand.mapper.BrandMapper;
-import com.sluv.server.domain.brand.mapper.RecentSelectBrandMapper;
 import com.sluv.server.domain.brand.repository.BrandRepository;
 import com.sluv.server.domain.brand.repository.RecentSelectBrandRepository;
 import com.sluv.server.domain.user.entity.User;
@@ -25,8 +23,6 @@ public class BrandService {
     private final BrandRepository brandRepository;
     private final RecentSelectBrandRepository recentSelectBrandRepository;
     private final UserRepository userRepository;
-    private final BrandMapper brandMapper;
-    private final RecentSelectBrandMapper recentSelectBrandMapper;
 
 
     public PaginationResDto<BrandSearchResDto> findAllBrand(String brandName, Pageable pageable){
@@ -34,14 +30,8 @@ public class BrandService {
         Page<Brand> brandPage = brandRepository.findByAllBrandKrOrBrandEnStartingWith(brandName, pageable);
 
         List<BrandSearchResDto> dtoList = brandPage.stream()
-                .map(brandMapper::toBrandSearchResDto
-//                .map(data -> BrandSearchResDto.builder()
-//                        .id(data.getId())
-//                        .brandKr(data.getBrandKr())
-//                        .brandEn(data.getBrandEn())
-//                        .brandImgUrl(data.getBrandImgUrl())
-//                        .build()
-                ).toList();
+                .map(BrandSearchResDto::of)
+                .toList();
 
         return PaginationResDto.<BrandSearchResDto>builder()
                 .hasNext(brandPage.hasNext())
@@ -54,8 +44,8 @@ public class BrandService {
 
     public List<BrandSearchResDto> findTopBrand() {
         return brandRepository.findTop10By().stream()
-                                            .map(brandMapper::toBrandSearchResDto
-                                            ).collect(Collectors.toList());
+                                            .map(BrandSearchResDto::of
+                                            ).toList();
     }
 
     public List<RecentSelectBrandResDto> findRecentSelectBrand(User user) {
@@ -63,7 +53,7 @@ public class BrandService {
         List<RecentSelectBrand> recentSelectBrandList = recentSelectBrandRepository.getRecentSelectBrandTop20(user);
 
         return recentSelectBrandList.stream()
-                .map(recentSelectBrandMapper::toRecentSelectBrandResDto)
+                .map(RecentSelectBrandResDto::of)
                 .toList();
     }
 }
